--- a/linlaytest4/src/main/res/layout/activity_main.xml
+++ b/linlaytest4/src/main/res/layout/activity_main.xml
@@ -8,12 +8,57 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:text="회 원 가 입"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:textSize="30dp"
+        android:background="#FFc107"
+        android:gravity="center"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:textSize="20dp"
+            android:layout_margin="10dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text=" 이 름 "
+            android:gravity="center"/>
+        <EditText
+            android:layout_margin="10dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:id="@+id/edtName"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:textSize="20dp"
+            android:layout_margin="10dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text=" 전 화 번 호 "
+            android:gravity="center"/>
+        <EditText
+            android:layout_margin="10dp"
+            android:inputType="phone"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:maxLength="11"
+            android:layout_height="wrap_content"
+            android:id="@+id/edtTel"/>
+    </LinearLayout>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:text="가 입"
+        android:id="@+id/btn"/>
 </LinearLayout>
